@@ -1,3 +1,7 @@
+2004-03-02  ujwal
+
+	* Added more code for keybinding manager. Still incomplete, but getting there.
+
 2004-02-29  ujwal
 
 	* Fixed bug in [PseudoTerminal saveSession:].
